--- a/.github/workflows/buildapp.yml
+++ b/.github/workflows/buildapp.yml
@@ -18,7 +18,7 @@ on:
         type: string
       decrypted_youtube_url:
         description: "Direct URL to the decrypted YouTube ipa. The version of YouTube will be detected automatically."
-        default: ""
+        default: "https://armconverter.com/decryptedappstore/download/544007664/com.google.ios.youtube/20.14.2?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJzdWIiOjEyMDI1MzQ3LCJpYXQiOjE3NDQ1NTY5ODksImV4cCI6MTc0NDU2Nzc4OSwiYXBwaWQiOjU0NDAwNzY2NCwiYXBwdmVyIjoiMjAuMTQuMiJ9.xpjP_InPCEXLejKr7lv_ALx-84XyIxzFmb9W2I03_Ro"
         required: true
         type: string
       bundle_id:
